Add @database path to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,9 @@
             "@types/*": [
                 "src/Types/*"
             ],
+            "@database/*": [
+                "src/System/Database/*"
+            ]
         }
     },
     "include": [
