Add new folder to .gitignore (tests)

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ package-lock.json
 
 # oh hey haha that wasnt supposed to be there ahahha
 eng.traineddata
+
+
+# not what you think it is.
+tests 
