--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "license": "none",
   "scripts": {
     "build": "tsc",
-    "start": "npx nodemon src/index.ts"
+    "start": "npx nodemon src/index.ts",
+    "lint": "eslint --ext .ts ./src",
+    "lint:fix": "eslint --fix --ext .ts ./src"
   },
   "dependencies": {
     "@discordjs/builders": "^1.6.3",
     "@discordjs/rest": "^1.7.1",
-    "@types/node": "^20.1.7",
     "axios": "^1.4.0",
     "canvas-gif": "^1.0.3",
     "discord-api-types": "^0.37.42",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "mongoose": "^7.6.7",
     "node-html-parser": "^6.1.5",
     "node-ts-ocr": "^1.0.15",
@@ -25,7 +26,20 @@
     "tesseract.js": "^5.0.3",
     "ts-dotenv": "^0.9.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.0.4"
+    "tsconfig-paths": "^4.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.6",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "prettier": "3.1.1",
+    "typescript": "^5.3.3"
   }
 }
