--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:fix": "eslint --fix --ext .ts ./src"
   },
   "dependencies": {
-    "@discordjs/builders": "^1.6.3",
+    "@discordjs/builders": "^1.7.0",
     "@discordjs/rest": "^1.7.1",
     "axios": "^1.4.0",
     "canvas-gif": "^1.0.3",
@@ -17,9 +17,11 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "mongoose": "^7.6.7",
+    "murmurhash": "^2.0.1",
     "node-html-parser": "^6.1.5",
     "node-ts-ocr": "^1.0.15",
     "nodemon": "^2.0.22",
+    "puppeteer": "^21.7.0",
     "sanitize": "^2.1.2",
     "string-sanitizer": "^2.0.2",
     "string-strip-html": "^8.5.0",
