Add scripts and dumped_scripts to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ package-lock.json
 # oh hey haha that wasnt supposed to be there ahahha
 eng.traineddata
 
+# dump them yourself
+dumped_scripts
+
+# wip
+scripts
 
 # not what you think it is.
 tests
