Add acorn package

--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "dependencies": {
     "@discordjs/builders": "^1.7.0",
     "@discordjs/rest": "^1.7.1",
+    "@types/acorn": "^6.0.0",
+    "@types/hast": "^3.0.3",
+    "@types/js-beautify": "^1.14.3",
+    "acorn": "^8.11.3",
+    "acorn-walk": "^8.3.2",
     "axios": "^1.4.0",
     "canvas-gif": "^1.0.3",
     "discord-api-types": "^0.37.42",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
+    "hast": "^1.0.0",
+    "js-beautify": "^1.14.11",
     "mongoose": "^7.6.7",
     "murmurhash": "^2.0.1",
     "node-html-parser": "^6.1.5",
