@types isn't a valid .tsconfig path. oops

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
             "@maps/*": [
                 "src/Maps/*"
             ],
-            "@types/*": [
+            "@mizukiTypes/*": [
                 "src/Types/*"
             ],
             "@util/*": [
