--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "v0.0.1",
   "license": "none",
   "scripts": {
-    "dev": "NODE_ENV=development npx nodemon src/index.ts",
+    "dev": "npx nodemon src/index.ts",
     "prod": "export NODE_ENV=production || set NODE_ENV=production && node dist/src",
     "build": "echo Starting build.. && tsc --project tsconfig.json && tsc-alias && echo Build complete!",
     "lint": "eslint --ext .ts ./src",
@@ -22,7 +22,7 @@
     "axios": "^1.4.0",
     "canvas-gif": "^1.0.3",
     "discord-api-types": "^0.37.42",
-    "discord.js": "^14.11.0",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "hast": "^1.0.0",
     "js-beautify": "^1.14.11",
