--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-html-parser": "^6.1.5",
     "node-ts-ocr": "^1.0.15",
     "nodemon": "^2.0.22",
+    "pet-pet-gif": "^1.0.9",
     "puppeteer": "^21.7.0",
     "sanitize": "^2.1.2",
     "string-sanitizer": "^2.0.2",
