--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/Util/Tracker"]
 	path = src/Util/Tracker
-	url = https://github.com/nakoyasha/Tracker
+	url = https://github.com/nakoyasha/tracker
