chore: Add support for json files to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,7 +46,9 @@
         }
     },
     "include": [
-        "./**/*.ts"
+        "./**/*.ts",
+        "./*.json",
+        "./**/*.json"
     ],
     "exclude": [
         "node_modules",
