--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   "dependencies": {
     "@discordjs/builders": "^1.7.0",
     "@discordjs/rest": "^1.7.1",
+    "@mizuki-bot/tracker": "file:src/Util/Tracker",
     "@sentry/node": "^7.106.0",
     "@sentry/types": "^7.106.0",
     "@types/hast": "^3.0.3",
     "@types/js-beautify": "^1.14.3",
-    "acorn": "^8.11.3",
-    "acorn-walk": "^8.3.2",
     "axios": "^1.4.0",
     "canvas-gif": "^1.0.3",
     "discord-api-types": "^0.37.42",
@@ -26,12 +25,10 @@
     "hast": "^1.0.0",
     "js-beautify": "^1.14.11",
     "mongoose": "^7.6.7",
-    "murmurhash": "^2.0.1",
     "node-html-parser": "^6.1.5",
     "node-ts-ocr": "^1.0.15",
     "nodemon": "^2.0.22",
     "pet-pet-gif": "^1.0.9",
-    "puppeteer": "^21.7.0",
     "sanitize": "^2.1.2",
     "string-sanitizer": "^2.0.2",
     "string-strip-html": "^8.5.0",
