feat: add a CheckFFlags routine
for now i am just praying that it'll work :ennapray:

--- a/config.json
+++ b/config.json
@@ -2,5 +2,9 @@
   "tracker": {
     "buildDiffEnabled": true,
     "buildDiffChannel": "1176206917027237889"
+  },
+  "roblox": {
+    "buildDiffEnabled": true,
+    "buildDiffChannel": "1176206917027237889"
   }
 }
