chore: remove OWNER_ID from the env and replace it with instance info in the config

--- a/config.json
+++ b/config.json
@@ -1,4 +1,10 @@
 {
+  "instance": {
+    "name": "Mizuki",
+    "ownerName": "nakoyasha",
+    "ownerId": "222069018507345921",
+    "repoUrl": "https://github.com/nakoyasha/mizuki"
+  },
   "routines": {
     "checkFFlags": {
       "enabled": true,
