--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/hast": "^3.0.3",
     "@types/js-beautify": "^1.14.3",
     "axios": "^1.4.0",
+    "canvas": "^2.11.2",
     "canvas-gif": "^1.0.3",
     "discord-api-types": "^0.37.42",
     "discord.js": "^14.14.1",
