--- a/config.json
+++ b/config.json
@@ -13,7 +13,8 @@
     "saveBuild": {
       "enabled": false,
       "useWebhook": true,
-      "webhookUrl": "webhook-her",
+      "runEvery": 600,
+      "webhookUrl": "webhook-here",
       "channel": "1176206917027237889"
     }
   }
