--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "mizuki",
   "version": "v0.0.1",
-  "license": "none",
+  "license": "MIT",
   "scripts": {
     "dev": "npx nodemon src/index.ts",
-    "prod": "export NODE_ENV=production || set NODE_ENV=production && node dist/src",
-    "build": "echo Starting build.. && tsc --project tsconfig.json && tsc-alias && echo Build complete!",
+    "prod": "node dist",
+    "build": "node scripts/build.mjs",
     "lint": "eslint --ext .ts ./src",
     "lint:fix": "eslint --fix --ext .ts ./src"
   },
@@ -43,6 +43,7 @@
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "esbuild": "0.20.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.0",
