--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
         "rootDir": "",
         "outDir": "dist",
         "strict": true,
+        "allowJs": true,
+        "checkJs": true,
         "moduleResolution": "node",
         "importHelpers": true,
         "experimentalDecorators": true,
@@ -53,6 +55,5 @@
     "exclude": [
         "node_modules",
         "scripts",
-        "dist"
     ],
 }
