--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.3.1",
     "hast": "^1.0.0",
     "js-beautify": "^1.14.11",
+    "localforage": "^1.10.0",
     "mongoose": "^7.6.7",
     "node-html-parser": "^6.1.5",
     "node-ts-ocr": "^1.0.15",
@@ -52,6 +53,7 @@
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "3.1.1",
+    "tslib": "^2.6.3",
     "typescript": "^5.3.3"
   }
 }
