--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "dependencies": {
     "@discordjs/builders": "^1.7.0",
     "@discordjs/rest": "^1.7.1",
-    "@sentry/node": "^7.106.0",
-    "@sentry/types": "^7.106.0",
+    "@sentry/node": "^9.1.0",
+    "@sentry/profiling-node": "^9.1.0",
     "axios": "^1.4.0",
     "discord-api-types": "^0.37.42",
-    "discord.js": "^14.14.1",
+    "discord.js": "^14.15.3",
     "dotenv": "^16.3.1",
+    "lodash": "^4.17.21",
     "mongoose": "^7.6.7",
+    "node-html-parser": "^6.1.5",
     "nodemon": "^2.0.22",
     "pet-pet-gif": "^1.0.9",
-    "sanitize": "^2.1.2",
+    "tesseract.js": "^6.0.0",
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
